Implemented `IDContext` and `IDContextIndex` - implemented `IDContext` - inherited `IDContextIndex<RANDOM_GENERATOR>` from   `Archive::IndexReader<IDContext, RepetitionReference, RANDOM_GENERATOR>` - inherited `IDContextIndexBuilder` from   `Archive::IndexBuilder<IDContext, RepetitionReference>` - removed `RSIndex` - added `sampling_delta` among `SBSContextIndex`'s members - removed `split_by_chromosome_id(...)` from `SBSContextIndex`'s methods - renamed `build_context_index` into `build_SBS_context_index` - removed `build_rs_index` - implemented `build_id_context_index` - updated `mutations_sim` to support `IDContextIndex` - updated `tests/id_signature.cpp` - updated README.md

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ species_sim
 mutations_sim
 descendants_builder
 tissue_sampler
-build_context_index
-build_repetition_index
+build_SBS_context_index
+build_ID_context_index
 sample_context_index
 RACES.so
 RACES.dll
